@@ -17,13 +17,13 @@ import org.opensmartgridplatform.domain.core.valueobjects.smartmetering.WindowEl
 public class PushSetupSmsBuilder {
 
   private CosemObisCode logicalName = new CosemObisCode(new int[] {1, 2, 3, 4, 5, 6});
-  private TransportServiceType transportServiceType = TransportServiceType.TCP;
-  private MessageType messageType = MessageType.A_XDR_ENCODED_X_DLMS_APDU;
+  private final TransportServiceType transportServiceType = TransportServiceType.TCP;
+  private final MessageType messageType = MessageType.A_XDR_ENCODED_X_DLMS_APDU;
   private SendDestinationAndMethod sendDestinationAndMethod =
       new SendDestinationAndMethod(this.transportServiceType, "destination", this.messageType);
-  private Integer randomisationStartInterval = new Integer(1);
-  private Integer numberOfRetries = new Integer(10);
-  private Integer repetitionDelay = new Integer(2);
+  private Integer randomisationStartInterval = Integer.valueOf(1);
+  private Integer numberOfRetries = Integer.valueOf(10);
+  private Integer repetitionDelay = Integer.valueOf(2);
 
   private List<CosemObjectDefinition> pushObjectList;
   private List<WindowElement> communicationWindow;
